--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg-extended": "^1.5.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.20",
